# ToDoList

./: README.md  models.py
alpha_project/: README.md  crud_logic.py  main.py
alpha_project/screens/: todo_lists.py
alpha_project/tests/: test_crud_logic.py
alpha_project/todo_app/: main.py  todo_app.db
second_beta/done_i_guess/: pyproject.toml
second_beta/done_i_guess/todo_app/: api.py  crud_logic.py  db_utils.py  main.py  models.py  todo_app.db  utils.py
second_beta/done_i_guess/todo_app/screens/: common.py  todo_list_items.py  todo_lists.py
